--- a/Experience.html
+++ b/Experience.html
@@ -1,46 +1,42 @@
-<HTML>
-<HEAD><TITLE>Eyler Experience </TITLE>
-<LINK href="mae.css" rel="stylesheet" media="all">
-</HEAD>
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <link href="mae.css" rel="stylesheet" media="all">
+    <title>Eyler Experience</title>
+</head>
 
 <BODY>
 <CENTER>
-<TABLE cellSpacing=0>
-  <TR>
-    <TD class="menu" colSpan=2>
-      <A href="index.html">Eyler Home</A> | 
+  <div class="menu">
+      <A href="index.html">Home</A> | 
       </A href="Experience.html">Experience</A> | 
       <A href="Courses.html">Courses</A> | 
       <A href="Research.html">Research</A> | 
       <A href="Software.html">Software</A> 
-      <!--A href="http://abb.marmara.edu.tr/cv/191/"><i>Türkçe</i></A--> 
-    </TD>
-  </TR>
-  <!--TR>
-    <TD align="center" colSpan=2><H3>
-Work Experience
-    </H3></TD>
-  </TR-->
-  <TR>
-    <TD valign="top">
+  </div>
+<BR> 
+<div class="content">
+  <div>
 <B>Employers</B>
 <P>
-1995-14   Professor, <A href="http://eng.marmara.edu.tr/" target="_blank"> 
+1995-14   Professor, <A href="http://eng.marmara.edu.tr/" target=NewTab> 
 Marmara University</A>, Istanbul
 <P>
-1990-95   Professor,  <A href="http://www.ie.bilkent.edu.tr/" target="_blank"> 
+1990-95   Professor,  <A href="http://www.ie.bilkent.edu.tr/" target=NewTab> 
 Bilkent University</A>, Ankara
 <P>
-1984-90   Associate Prof,  <A href="http://www.ie.boun.edu.tr/" target="_blank"> 
-Bogazici University</A>, Istanbul
+1984-90   Associate Prof,  <A href="http://www.ie.boun.edu.tr/" target=NewTab> 
+BoÄŸaziÃ§i University</A>, Istanbul
 <P>
-1988-89   on leave to  <A href="http://www.ie.bilkent.edu.tr/" target="_blank"> 
+1988-89   on leave to  <A href="http://www.ie.bilkent.edu.tr/" target=NewTab> 
 Bilkent University</A>, Ankara
 <P>
-1980-84   Assistant Prof,  <A href="http://www.ie.boun.edu.tr/" target="_blank">   
-Bogazici University</A>, Istanbul
+1980-84   Assistant Prof,  <A href="http://www.ie.boun.edu.tr/" target=NewTab>   
+BoÄŸaziÃ§i University</A>, Istanbul
 <P>
-1977-80   Research Staff,  <A href="http://www.draper.com/" target="_blank"> 
+1977-80   Research Staff,  <A href="http://www.draper.com/" target=NewTab> 
 Draper Lab</A>, Cambridge, MA
 <P>
 <B>Administrative Duties</B>
@@ -48,7 +44,7 @@ Draper Lab</A>, Cambridge, MA
 2009-10 Assistant Dean
 <BR>
 2007-11 Consultant,  
-<A href="http://www.tubitak.gov.tr/" target="_blank">TUBITAK</A>
+<A href="http://www.tubitak.gov.tr/" target=NewTab>TUBITAK</A>
 <BR>
 2006-08  IE Department Chairman
 <BR>
@@ -70,41 +66,37 @@ Draper Lab</A>, Cambridge, MA
 <BR>
 1983-84  Computer Procurement Committee
 <BR>
-    </TD>
-    <TD valign="top">
+  </div>&emsp;
+  <div style="vertical-align:top">
 <B>Grants and Contracts</B>
 <P>
-1995-96  Evaluation of a new lending system for <BR>
+1995-96  Evaluation of a new lending system for 
 TOKI (Management of Public Housing)
 <P>
-1989-90  MIS project definition study for <BR>
-MEB (Ministry of Education)
+1989-90  MIS project definition study for 
+the Ministry of Education
 <P>
-1988  Development of various software tools for <BR>
+1988  Development of various software tools for 
 Bilkom (local branch of Apple Computer)
 <P>
-1985-86  Management information system design for <BR>
-Asilçelik (steel production plant)
+1985-86  Management information system design for 
+AsilÃ§elik (steel production plant)
 <P>
-1985-86  Production planning of Izmit refinery for <BR>
+1985-86  Production planning of Izmit refinery for 
 TUPRAS, Turkish oil refineries
 <P>
-1985  Simulation study of the elevator system for <BR>
+1985  Simulation study of the elevator system for 
 Hilton Hotels, Istanbul
 <P>
-1982  Quality and productivity improvement for <BR>
-Koç Holding
+1982  Quality and productivity improvement for 
+KoÃ§ Holding
 <P>
-1982-84  Process heat requirements of the industry for <BR>
-NATO, Science for Stability Program
+1982-84  Process heat requirements of the industry 
+for NATO, Science for Stability Program
 <P>
-    </TD>
-  </TR>
-    </TD>
-  </TR>
-</TABLE>
-<p>
-<H6>Last update: Jan 2014 </H6>
+  </div>
+</div>
+<H5>Last update: Sep 2019 </H5>
 </CENTER>
 </BODY>
 </HTML>
