--- a/Research.html
+++ b/Research.html
@@ -1,23 +1,24 @@
-<HTML>
-<HEAD><TITLE>Eyler Research </TITLE>
-<LINK href="mae.css" rel="stylesheet" media="all">
-</HEAD>
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <link href="mae.css" rel="stylesheet" media="all">
+    <title>Eyler Research</title>
+</head>
 
 <BODY>
 <CENTER>
-<TABLE cellSpacing=0>
-  <TR>
-    <TD class="menu" colSpan=3>
-      <A href="index.html">Eyler Home</A> | 
+  <div class="menu">
+      <A href="index.html">Home</A> | 
       <A href="Experience.html">Experience</A> | 
       <A href="Courses.html">Courses</A> | 
       </A href="Research.html">Research</A> | 
       <A href="Software.html">Software</A> 
-      <!--A href="http://abb.marmara.edu.tr/cv/191/"><i>Türkçe</i></A--> 
-    </TD>
-  </TR>
-  <TR>
-    <TD valign="top" width=400>
+  </div>
+<BR> 
+<div class="content">
+  <div>
 <b>PhD Students</b> <P>
 <!--A href="http://www.elk.itu.edu.tr/~eksin"-->
 Ibrahim Eksin</A> (1983)<BR>
@@ -34,31 +35,28 @@ Levent Mollamustafaoglu</A> (1990)<BR>
 Mustafa Ege</A> (1993)<BR>
 "Reliability Analysis in Fault-tolerant Software and Error Recovery"
 <P>
-<b>Selected Publications by Akif Eyler</b> <P>
-V. Verter, M. A. Eyler, &quot;Productivity Measurement, Evaluation, and
-Improvement&quot;, <i>Productivity</i> 31, 69-75. (1990)
+<b>Selected Publications</b> <P>
+V. Verter, M. A. Eyler, "Productivity Measurement, Evaluation, and
+Improvement", <i>Productivity</i> 31, 69-75. (1990)
 <P>
-M. A. Eyler, &quot;Simulation of Queuing Networks,&quot; in <i>Queuing Theory
-and Applications, </i>Ed. S.Özekici, Hemisphere. (1990)
+M. A. Eyler, "Simulation of Queuing Networks," in <i>Queuing Theory
+and Applications, </i>Ed. S.Ã–zekici, Hemisphere. (1990)
 <P>
 M. Akgul, M. A. Eyler (Editors) <i>Yoneylem Arastirmasi Bildiriler'89</i>, 
 Bilkent Universitesi, Ankara. (1989).
 <P>
-M. A. Eyler, &quot;Sensitivity of sample values to parameter changes&quot;, 
+M. A. Eyler, "Sensitivity of sample values to parameter changes", 
 <i>J. of Optimization Theory and Applications</i> 45, 159-163. (l985)
 <P>
-Y. C.Ho, M. A. Eyler, T. T. Chien, &quot;A new approach to determine parameter
-sensitivities of transfer lines,&quot; <i>Management Science</i> 29, 700-714.
+Y. C.Ho, M. A. Eyler, T. T. Chien, "A new approach to determine parameter
+sensitivities of transfer lines," <i>Management Science</i> 29, 700-714.
 (1983)
 <P>
-Y. C. Ho, M. A. Eyler, T. T. Chien, &quot;A gradient technique for general buffer
-storage design in a production line, &quot; <i>Int. Journal of Production
+Y. C. Ho, M. A. Eyler, T. T. Chien, "A gradient technique for general buffer
+storage design in a production line, " <i>Int. Journal of Production
 Research</i> 17, 557-580. (1979).
-<P>
-    </TD>
-    <TD width=10>
-    </TD>
-    <TD valign="top" width=35%>
+  </div>
+  <div style="text-align:right">
 <b>MS Students</b> <P>
 <!--A href="http://www.freeman.tulane.edu/faculty/isds.htm" dostropa olacak!! -->
 Yasemin Aksoy</A> (1983)<BR>
@@ -100,11 +98,9 @@ Murat Parlakisik (2002)<BR>
 Erkan Durmus (2002)<BR>
 Oguzhan Kocatepe (2003)<BR>
 Ahmet Caglar Gulseni (2003)<BR>
-    </TD>
-  </TR>
-</TABLE>
-<p>
-<H6>Last update: July 2004 </H6>
+  </div>
+</div>
+<H5>Last update: Sep 2019 </H5>
 </CENTER>
 </BODY>
 </HTML>
