--- a/index.html
+++ b/index.html
@@ -1,61 +1,57 @@
-﻿<HTML>
-<HEAD><TITLE>M Akif Eyler</TITLE>
-<meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
-<LINK href="mae.css" rel="stylesheet" media="all">
-</HEAD>
+﻿<!DOCTYPE html>
+<html lang="en-US">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <link href="mae.css" rel="stylesheet" media="all">
+    <title>M Akif Eyler</title>
+</head>
 
 <BODY>
 <CENTER>
-<TABLE cellSpacing=0>
-  <TR>
-    <TD class="menu" colSpan=2>
-      </A href="index.html">Eyler Home</A> | 
+  <div class="menu">
+      </A href="index.html">Home</A> | 
       <A href="Experience.html">Experience</A> | 
       <A href="Courses.html">Courses</A> | 
       <A href="Research.html">Research</A> | 
       <A href="Software.html">Software</A> 
-      <!--A href="http://abb.marmara.edu.tr/cv/191/"><i>Türkçe</i></A--> 
-    </TD>
-  </TR>
-  <TR>
-    <TD align="center" colSpan=2><H3>
+  </div>
+<BR> 
+<div class="content">
+    <H3>
     Mehmet Akif Eyler (Eğler) 
-    </H3></TD>
-  </TR>
-  <TR>
-    <TD>
-<I><A href="http://www.genealogy.ams.org/html/id.phtml?id=81183" target=_blank> PhD</A>:</I> 
-     Decision and Control, Harvard University, 1979 <BR>
-<I>MS:</I>       Applied Sciences, Harvard University, 1976 <BR>
-<I>BS:</I>       Mechanical Engineering, Bogazici University, 1975 <BR>
-<!--I>Advisor:</I> <A href="http://hrl.harvard.edu/~ho/" target=_blank>Prof Yu-Chi Ho</A-->
-<P>
-<I>Areas of interest:   </I><BR>
+    </H3>
+
+  <div style="text-align:center">
+<p>
+<I>BS:</I>    Mechanical Eng., Boğaziçi University, 1975 <BR>
+<I>MS:</I>    Applied Sciences, Harvard University, 1976 <BR>
+<I><A href="https://genealogy.math.ndsu.nodak.edu/id.php?id=81183" target=NewTab> 
+PhD</A>:</I>  Decision & Control, Harvard University, 1979 <BR>
+<I>Advisor:</I> <A href="http://hrl.harvard.edu/~ho/" target=NewTab>
+Prof Yu-Chi Ho</A>
+</p><p>
+<I>Areas of interest: </I><BR>
 Information science <BR>
 Discrete-event simulation <BR> 
 Programming languages   
-<P>
+</p><p>
 <I>Current position: </I> <br>
 Retired from Marmara University <br>
-<br>
-    </TD>
-    <TD halign="center"><IMG src="rsrc/eyler3.jpg" alt="Akif Eyler">
-    </TD>
-  </TR>
-  <TR>
-    <TD>
+</p><p>
 <I>e-mail:</I> ma.eyler at gmail.com <BR> 
-<I>Tel:</I> +90 (216) 348 0292 x1222 <BR> 
-<!--I>Fax:</I> +90 (216) 347 1360 <BR--> 
-    </TD>
-    <TD>
-<I>github:</I> <A href="http://github.com/maeyler" target=_blank>github.com/maeyler</A> <BR> 
-<I>blog:</I>  <A href="http://eyler.blogspot.com/" target=_blank>eyler.blogspot.com</A> <BR> 
-    </TD>
-  </TR>
-</TABLE>
-<p>
-<H6>Last update: Jan 2017 </H6>
+<I>github:</I> <A href="http://github.com/maeyler" target=NewTab>
+github.com/maeyler</A> <BR> 
+<I>blog:</I>  <A href="http://eyler.blogspot.com/" target=NewTab>
+eyler.blogspot.com</A> <BR> <br>
+    </p>
+  </div>
+  <div style="text-align:center">
+    <IMG src="rsrc/eyler3.jpg" alt="Akif Eyler">
+  </div>
+</div>
+
+<H5>Last update: Sep 2019 </H5>
 </CENTER>
 </BODY>
 </HTML>
