--- a/Research.html
+++ b/Research.html
@@ -98,6 +98,8 @@ Murat Parlakisik (2002)<BR>
 Erkan Durmus (2002)<BR>
 Oguzhan Kocatepe (2003)<BR>
 Ahmet Caglar Gulseni (2003)<BR>
+Lemi Orhan Ergin (2005)<BR>
+Hakan Dilek (2006)<BR>
   </div>
 </div>
 <H5>Last update: Sep 2019 </H5>
