--- a/Courses.html
+++ b/Courses.html
@@ -21,18 +21,18 @@
   <H3>Courses Taught by M Akif Eyler
   </H3>
   <div>
+<b>FSMV University</b> (2014- ) <br>
+<A href="https://blm305.github.io/" target=NewTab>
+BLM 305</A> Advanced programming <br>
+<A href="https://maeyler.github.io/Automata-2019/" target=NewTab>
+BLM 320</A> Formal lang. and automata theory <br>
+<br>
 <b>Istanbul Şehir University</b> (2014-2018) <br>
 Math 205 Linear Algebra <br>
 Math 206 Differential Equations <br>
 EECS 241 Discrete Mathematics <br>
 <br>
-<b>FSMV University</b> (2014- ) <br>
-<A href="https://maeyler.github.io/BLM305-2018" target=NewTab>
-BLM 305</A> Advanced programming <br>
-<A href="https://maeyler.github.io/Auto" target=NewTab>
-BLM 320</A> Formal lang. and automata theory <br>
-<br>
-<b>Marmara University</b> (1995- ) <br>
+<b>Marmara University</b> (1995-2016) <br>
 CSE 100 Introduction to computer engineering <br>
 CSE 225 Data structures <br>
 CSE 246 Algorithms: analysis and design <br>
