--- a/Courses.html
+++ b/Courses.html
@@ -24,7 +24,7 @@
 <b>FSMV University</b> (2014- ) <br>
 <A href="https://blm305.github.io/" target=NewTab>
 BLM 305</A> Advanced programming <br>
-<A href="https://maeyler.github.io/Automata-2019/" target=NewTab>
+<A href="https://github.com/search?q=user%3Amaeyler+auto" target=NewTab>
 BLM 320</A> Formal lang. and automata theory <br>
 <br>
 <b>Istanbul Şehir University</b> (2014-2018) <br>
