--- a/Software.html
+++ b/Software.html
@@ -31,7 +31,7 @@ Object-Oriented Software Design (Java - 2004)
 Small Simple Safe</a>: 
 developer tool for handling classes and objects. (Java - 2003) 
 <P>
-<a href="https://maeyler.github.io/Auto/microJ/" target=NewTab>microJ</a>: 
+<a href="https://maeyler.github.io/Automata-2019/microJ/" target=NewTab>microJ</a>: 
 small language similar to JavaScript, used in
 Compiler Design and Automata courses (Java - 2002)
 <P>
