--- a/Experience.html
+++ b/Experience.html
@@ -14,6 +14,7 @@
       </A href="Experience.html">Experience</A> | 
       <A href="Courses.html">Courses</A> | 
       <A href="Research.html">Research</A> | 
+      <A href="work.html">Cloud</A> | 
       <A href="Software.html">Software</A> 
   </div>
 <BR> 
