--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <A href="Experience.html">Experience</A> | 
       <A href="Courses.html">Courses</A> | 
       <A href="Research.html">Research</A> | 
+      <A href="work.html">Cloud</A> | 
       <A href="Software.html">Software</A> 
   </div>
 <BR> 
@@ -51,7 +52,7 @@ eyler.blogspot.com</A> <BR> <br>
   </div>
 </div>
 
-<H5>Last update: Feb 2021 </H5>
+<H5>Last update: Feb 2023 </H5>
 </CENTER>
 </BODY>
 </HTML>
