--- a/Experience.html
+++ b/Experience.html
@@ -22,22 +22,22 @@
   <div>
 <B>Employers</B>
 <P>
-1995-14   Professor, <A href="http://eng.marmara.edu.tr/" target=NewTab> 
+1995-14   Professor, <A href="https://eng.marmara.edu.tr/" target=NewTab> 
 Marmara University</A>, Istanbul
 <P>
-1990-95   Professor,  <A href="http://www.ie.bilkent.edu.tr/" target=NewTab> 
+1990-95   Professor,  <A href="https://www.ie.bilkent.edu.tr/" target=NewTab> 
 Bilkent University</A>, Ankara
 <P>
-1984-90   Associate Prof,  <A href="http://www.ie.boun.edu.tr/" target=NewTab> 
+1984-90   Associate Prof,  <A href="https://www.ie.boun.edu.tr/" target=NewTab> 
 Boğaziçi University</A>, Istanbul
 <P>
-1988-89   on leave to  <A href="http://www.ie.bilkent.edu.tr/" target=NewTab> 
+1988-89   on leave to  <A href="https://www.ie.bilkent.edu.tr/" target=NewTab> 
 Bilkent University</A>, Ankara
 <P>
-1980-84   Assistant Prof,  <A href="http://www.ie.boun.edu.tr/" target=NewTab>   
+1980-84   Assistant Prof,  <A href="https://www.ie.boun.edu.tr/" target=NewTab>   
 Boğaziçi University</A>, Istanbul
 <P>
-1977-80   Research Staff,  <A href="http://www.draper.com/" target=NewTab> 
+1977-80   Research Staff,  <A href="https://www.draper.com/" target=NewTab> 
 Draper Lab</A>, Cambridge, MA
 <P>
 <B>Administrative Duties</B>
@@ -45,7 +45,7 @@ Draper Lab</A>, Cambridge, MA
 2009-10 Assistant Dean
 <BR>
 2007-11 Consultant,  
-<A href="http://www.tubitak.gov.tr/" target=NewTab>TUBITAK</A>
+<A href="https://www.tubitak.gov.tr/" target=NewTab>TUBITAK</A>
 <BR>
 2006-08  IE Department Chairman
 <BR>
