--- a/Research.html
+++ b/Research.html
@@ -21,7 +21,7 @@
 <div class="content">
   <div>
 <b>PhD Students</b> <P>
-<!--A href="http://www.elk.itu.edu.tr/~eksin"-->
+<!--A href="https://www.elk.itu.edu.tr/~eksin"-->
 Ibrahim Eksin</A> (1983)<BR>
 "Sensitivity Theory Application to the Numerical Solution of 
 Optimal Control Problems"
@@ -29,7 +29,7 @@ Optimal Control Problems"
 Guven Mercankosk</A> (1987)<BR>
 "Perturbation Analysis in Discrete Event Simulation"
 <P>
-<!--A href="http://home.wanadoo.nl/molla"-->
+<!--A href="https://home.wanadoo.nl/molla"-->
 Levent Mollamustafaoglu</A> (1990)<BR>
 "A Multi-level Approach to Simulation Modeling"
 <P>
@@ -59,12 +59,12 @@ Research</i> 17, 557-580. (1979).
   </div>
   <div style="text-align:right">
 <b>MS Students</b> <P>
-<!--A href="http://www.freeman.tulane.edu/faculty/isds.htm" dostropa olacak!! -->
+<!--A href="https://www.freeman.tulane.edu/faculty/isds.htm" dostropa olacak!! -->
 Yasemin Aksoy</A> (1983)<BR>
 Guven Mercankosk (1983)<BR>
-<!--A href="http://home.wanadoo.nl/molla"-->
+<!--A href="https://home.wanadoo.nl/molla"-->
 Levent Mollamustafaoglu</A> (1984)<BR>
-<!--A href="http://people.mcgill.ca/nafiz.verter"-->
+<!--A href="https://people.mcgill.ca/nafiz.verter"-->
 Vedat Verter</A> (1985)<BR>
 Tarik Ozcelik (1986)<BR>
 Haluk Unsal (1987)<BR>
@@ -73,12 +73,12 @@ Hakan Alpay (1987)<BR>
 Ercan Oztemel (1987)<BR>
 Gulseli Zeren (1987)<BR>
 Hakan Kiran (1987)<BR>
-<!--A href="http://www.ilkay.net"-->
+<!--A href="https://www.ilkay.net"-->
 Ilkay Boduroglu</A> (1989)<BR>
 Lale Ulku Buyukyuksel (1989)<BR>
 Oguz Isikli (1993)<BR>
 Inanc Yildirim (1995)<BR>
-<!--A href="http://www.cs.bilkent.edu.tr/~selcuk"-->
+<!--A href="https://www.cs.bilkent.edu.tr/~selcuk"-->
 Ali Aydin Selcuk</A> (1995)<BR>
 Neval Bircaner (1997)<BR>
 Ugur Sipahi (1997)<BR>
