--- a/Software.html
+++ b/Software.html
@@ -28,7 +28,7 @@ small pieces of web pages used in teaching (JavaScript - 2018)
 Browser: sample program used in teaching
 Object-Oriented Software Design (Java - 2004)
 <P>
-<a href="http://maeyler.github.io/SmallSimpleSafe/" target=NewTab>
+<a href="https://maeyler.github.io/SmallSimpleSafe/" target=NewTab>
 Small Simple Safe</a>: 
 developer tool for handling classes and objects. (Java - 2003) 
 <P>
@@ -38,7 +38,7 @@ Compiler Design and Automata courses (Java - 2002)
 <P>
 Easy View: a three-panel browser for text files. 
 It received  
-<A href="http://www.tidbits.com/tb-issues/TidBITS-194.html#lnk2" target=NewTab>
+<A href="https://www.tidbits.com/tb-issues/TidBITS-194.html#lnk2" target=NewTab>
 MacUser Award</A> for Text Tools (MacApp - 1992)
 <P>
 Sözlük: Turkish-English dictionary (MacApp - 1989)
