--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <I>MS:</I>    Applied Sciences, Harvard University, 1976 <BR>
 <I><A href="https://genealogy.math.ndsu.nodak.edu/id.php?id=81183" target=NewTab> 
 PhD</A>:</I>  Decision & Control, Harvard University, 1979 <BR>
-<I>Advisor:</I> <A href="http://hrl.harvard.edu/~ho/" target=NewTab>
+<I>Advisor:</I> <A href="https://hrl.harvard.edu/~ho/" target=NewTab>
 Prof Yu-Chi Ho</A>
 </p><p>
 <I>Areas of interest: </I><BR>
@@ -41,9 +41,9 @@ Programming languages
 Retired from Marmara University <br>
 </p><p>
 <I>e-mail:</I> ma.eyler at gmail.com <BR> 
-<I>github:</I> <A href="http://github.com/maeyler" target=NewTab>
+<I>github:</I> <A href="https://github.com/maeyler" target=NewTab>
 github.com/maeyler</A> <BR> 
-<I>blog:</I>  <A href="http://eyler.blogspot.com/" target=NewTab>
+<I>blog:</I>  <A href="https://eyler.blogspot.com/" target=NewTab>
 eyler.blogspot.com</A> <BR> <br>
     </p>
   </div>
