--- a/Experience.html
+++ b/Experience.html
@@ -68,7 +68,7 @@ Draper Lab</A>, Cambridge, MA
 1983-84  Computer Procurement Committee
 <BR>
   </div>&emsp;
-  <div style="vertical-align:top">
+  <div>
 <B>Grants and Contracts</B>
 <P>
 1995-96  Evaluation of a new lending system for 
