--- a/work.html
+++ b/work.html
@@ -137,6 +137,16 @@
 <div class=content>
 <h3>Yakınlarım için</h3>
 <div class="my-item">
+    <div class="my-date">2005 -- 52 yazı</div>
+    <a target=NewTab href="https://ogretmeniniz.blogspot.com/">
+        Önce İnsan Sonra Öğretmen -- Selami Penbe</a>
+    <img src="image/egitim3.jpg" />
+    <div class="my-text">Öz eleştirinin gelişimimize olan katkısı:
+        Her şey 7 yıl önce oldu... <br>
+        ihtiyar bir öğretmenin hayat tecrübeleri
+    </div>
+</div>
+<div class="my-item">
     <div class="my-date">2013 -- 41 yazı</div>
     <a target=NewTab href="https://tanzanyadan.blogspot.com/?view=flipcard">Niye Tanzanya, Nere Arusha -- Ömer Cebeci</a>
     <img src="https://2.bp.blogspot.com/-SDGlRzLz6y8/UY6i9X5zDfI/AAAAAAAABKw/UZsgGjVBWtA/s320/IMG_2701.JPG" />
